# lqr

./: CMakeLists.txt  package.xml
include/: ExtendedLQR.h  matrix.h
src/: ExtendedLQR_diffdrive_noTimeOpt.cpp
